--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
             <li class = dblist>Understanding basic remote sensing principles and extracting information from 
                 imagery </li>
         </ul>
-        <p> Following the links at the top of this page will allow you to look at some examples of my work. </p>
+        <p> Following the links at the top of this page will allow you to look at some examples of my work including my maps portfolio, development projects
+        and database work. </p>
     </div>
     </div>
 
