--- a/automation.html
+++ b/automation.html
@@ -3,7 +3,7 @@
 <head>
 <title>Porfolio</title>
 <link rel="stylesheet" href="style.css">
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <h1 class = dataheading> DEVELOPMENT AND AUTOMATION </h1>
