--- a/automation.html
+++ b/automation.html
@@ -12,7 +12,7 @@
         <a href =https://katays.github.io/a3web/ target="_blank">here</a> as well as in this portfolio page. I have been able to gain experience working with API's 
          particularly the Esri JavaScript API as seen in <a href = https://katays.github.io/pl3/application.html target="_blank"> this example </a> of a interactive map made for elementary school 
          students to learn about the provices and territories in Canada with the source code found in my <a href = https://github.com/katays/pl3/blob/main/application.html target="_blank">respository</a>. 
-         It can also be seen in <a href = https://katays.github.io/pl2/custom.html target="_blank"> this example </a> where I plot an area of interest based on ditectional coordinates.
+         It can also be seen in <a href = https://katays.github.io/pl2/custom.html target="_blank"> this example </a> where I plot an area of interest based on directional coordinates.
           On the cartogrphic side I have also been able to work with Leaflet JS to create 
         clean mobile friendly <a href = https://katays.github.io/pl3/leafletTutorialJS.html target="_blank">maps</a>. This map also encourges interactivity from the user with 
         the opportunity to choose froma variety of basemaps pulled from the leaflet library. </p>
