--- a/automation.html
+++ b/automation.html
@@ -4,18 +4,22 @@
 <title>Porfolio</title>
 <link rel="stylesheet" href="style.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 <body>
     <h1 class = dataheading> DEVELOPMENT AND AUTOMATION </h1>
     <div class = auto>
     <p> My main experience is on the development side. I have had the opportunity to create full webpages along with a few of my classmates as seen 
-        <a href =https://katays.github.io/a3web/ target="_blank">here</a> as well as in this portfolio page. I have been able to gain experience working with API's 
+        <a href =https://katays.github.io/a3web/ target="_blank">here</a> as well as <a href =https://luna.flemingcollege.ca/geom99/2022/webFoxtrot/> this presentation website</a> which also shows my work 
+        on configurations of Esri software. I have been able to gain experience working with API's 
          particularly the Esri JavaScript API as seen in <a href = https://katays.github.io/pl3/application.html target="_blank"> this example </a> of a interactive map made for elementary school 
          students to learn about the provices and territories in Canada with the source code found in my <a href = https://github.com/katays/pl3/blob/main/application.html target="_blank">respository</a>. 
-         It can also be seen in <a href = https://katays.github.io/pl2/custom.html target="_blank"> this example </a> where I plot an area of interest based on directional coordinates.
-          On the cartogrphic side I have also been able to work with Leaflet JS to create 
+         It can also be seen in <a href = https://katays.github.io/pl2/custom.html target="_blank"> this example </a> where I plot an area of interest based on ditectional coordinates.
+          On the cartographic side I have also been able to work with Leaflet JS to create 
         clean mobile friendly <a href = https://katays.github.io/pl3/leafletTutorialJS.html target="_blank">maps</a>. This map also encourges interactivity from the user with 
         the opportunity to choose froma variety of basemaps pulled from the leaflet library. </p>
+
+   
 
     <p> 
        On the automation side of things I have been able to gain experience in writing Python scripts with a team to create a Biodiversity Index Calculator which 
